@@ -1,20 +1,0 @@
-language: perl
-perl:
-  -  "5.21"
-  -  "5.20"
-  -  "5.18"
-  -  "5.16"
-  -  "5.14"
-  -  "5.12"
-  -  "5.10"
-  -  "5.8"
-
-# Dependencies
-before_install:
-  - cpanm -n Data::FormValidator
-  - cpanm -n Email::Valid
-  - cpanm -n Net::DNS
-  - cpanm -n Test::Pod Test::Pod::Coverage
-
-# Build+test
-script: "perl Build.PL && ./Build && prove -b -r --verbose t/ xt/"
